--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.0"
   },
